client/src/components/pages/Settings.css
.settings-container {
  height: 75% !important;
  display: flex;
  flex-direction: row;
  flex-basis: 0;
  justify-content: space-around;
}

.settings-container > .themes,
.settings-container > .widgets {
  width: 40%;
}

.theme-container,
.settingsWidget-container {
  display: flex;
  flex-basis: 0;
}

/* THEMES */
.theme-container {
  flex-wrap: wrap;
}

.theme-option {
  width: 40%;
  margin: 5px;
  padding: 16px;
  border-radius: 7px;
  border: 1px solid var(--borders);
}

.theme-option:hover {
  cursor: pointer;
}

.theme-active {
  box-shadow: 0 0px 5px var(--accent);
}

.theme-name {
  text-align: center;
}

.theme-color-container {
  padding-top: 1vh;
  display: flex;
  justify-content: center;
}

.theme-color {
  height: 2vw;
  width: 2vw;
  /* border-radius: 3px; */
}

.theme-color:first-child {
  border-top-left-radius: 7px;
  border-bottom-left-radius: 7px;
}

.theme-color:last-child {
  border-top-right-radius: 7px;
  border-bottom-right-radius: 7px;
}
/* 
.theme-color + .theme-color {
  margin-left: 4px;
} */

/* WIDGETS */

.settingsWidget-container {
  flex-direction: column;
  overflow-y: scroll;
  max-height: 60vh;
}

.settingsWidget-container::-webkit-scrollbar {
  width: 15px;
  background-color: var(--bujo-body);
}

.settingsWidget-container::-webkit-scrollbar-thumb {
  width: 6px;
  background: var(--accent);
  border-radius: 6px;
  border: 3px solid var(--bujo-body);
}

.wid-container {
  width: 100%;
}

.wid-container {
  border: 1px solid var(--borders);
  border-radius: 7px;
  padding: 12px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  box-sizing: border-box;
}

.widget-delete-btn {
  height: 32px;
  width: 32px;
  padding: 0px;
  margin-right: 6px;
  border: 1px solid var(--borders);
  border-radius: 100%;
  text-align: center;
  font-size: 14px;
  line-height: 32px;
  color: var(--borders);
}

.widget-delete-btn:hover {
  background-color: var(--accent);
  color: var(--accent-text);
  cursor: pointer;
  transition: all 0.4s;
}

.wid-container + .wid-container {
  margin-top: 16px;
}

.settings-header {
  color: var(--headers);
  margin-top: 0;
  margin-bottom: 0;
}

.settings-category {
  color: var(--body);
}

.widget-createNew-container {
  margin-top: 32px;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.widget-showNew-btn {
  height: 40px;
  width: 40px;
  padding: 0px;
  border: 1px solid var(--borders);
  border-radius: 100%;
  text-align: center;
  font-size: 16px;
  line-height: 40px;
  background-color: var(--accent);
  color: var(--accent-text);
}

.widget-showNew-btn:hover {
  cursor: pointer;
}

.widget-showNew-btn:active,
.widget-showNew-btn-active {
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transition: all 0.5s;
  background-color: var(--bujo-body);
  color: var(--borders);
}

.widget-showNew-btn-hide {
  transform: rotate(-45deg);
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transition: all 0.5s;
  background-color: var(--accent);
  color: var(--accent-text);
}

.widget-createNew-btn {
  background-color: var(--accent);
  border: 1px solid var(--borders);
  border-radius: 5px;
  padding: 10px;
  margin-right: 16px;
  font-family: "Poppins", sans-serif;
  font-size: 12px;
  color: var(--accent-text);
}

.widget-createNew-btn:hover {
  cursor: pointer;
  background-color: var(--bujo-body);
  color: var(--borders);
  transition: all 0.5s;
}

